RESOLVED FIXED214009
REGRESSION: (r263977): [ iOS Debug WK2 ] 36 fast form and web-platform test consistently crashing
https://bugs.webkit.org/show_bug.cgi?id=214009
Summary REGRESSION: (r263977): [ iOS Debug WK2 ] 36 fast form and web-platform test c...
Karl Rackler
Reported 2020-07-06 15:36:20 PDT
Created attachment 403628 [details] Crash Log fast/css/pseudo-in-range-out-of-range-trivial.html fast/css/read-only-read-write-input-basics.html fast/forms/indeterminate-input-types.html fast/forms/label/labelable-elements.html fast/forms/label/labels-add-htmlFor-label.html fast/forms/label/labels-add-parent-label.html fast/forms/label/labels-change-htmlFor-attribute.html fast/forms/label/labels-multiple-sibling-labels.html fast/forms/label/labels-parent-and-sibling-labels.html fast/forms/label/labels-remove-htmlFor-attribute.html fast/forms/label/labels-remove-htmlFor-label.html fast/forms/label/labels-remove-parent-label.html fast/forms/label/labels-set-htmlFor-attribute.html fast/forms/week/ValidityState-stepMismatch-week.html fast/forms/week/week-appearance-basic.html fast/forms/week/week-appearance-pseudo-elements.html fast/forms/week/week-interactive-validation-required.html fast/forms/week/week-setrangetext.html fast/selectors/read-only-read-write-input-basics.html imported/blink/fast/forms/week-multiple-fields/week-multiple-fields-clearbutton-visibility-after-restore.html imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/form-controls/resets.html imported/w3c/web-platform-tests/html/rendering/widgets/appearance/default-styles.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-checkValidity.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-reportValidity.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-rangeOverflow.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-rangeUnderflow.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-stepMismatch.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid.html imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing.html imported/w3c/web-platform-tests/html/semantics/forms/the-form-element/form-elements-filter.html imported/w3c/web-platform-tests/html/semantics/forms/the-form-element/form-nameditem.html imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-stepdown.html imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-stepup.html imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/inrange-outofrange.html media/video-autoplay.html platform/ios/ios/fast/forms/date-input-decorations.html Description: These test are consistently crashing on iOS Debug WK2. It looks like the crash started after commit r263977. History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fcss%2Fpseudo-in-range-out-of-range-trivial.html&test=fast%2Fcss%2Fread-only-read-write-input-basics.html&test=fast%2Fforms%2Findeterminate-input-types.html&test=fast%2Fforms%2Flabel%2Flabelable-elements.html&test=fast%2Fforms%2Flabel%2Flabels-add-htmlFor-label.html&test=fast%2Fforms%2Flabel%2Flabels-add-parent-label.html&test=fast%2Fforms%2Flabel%2Flabels-change-htmlFor-attribute.html&test=fast%2Fforms%2Flabel%2Flabels-multiple-sibling-labels.html&test=fast%2Fforms%2Flabel%2Flabels-parent-and-sibling-labels.html&test=fast%2Fforms%2Flabel%2Flabels-remove-htmlFor-attribute.html&test=fast%2Fforms%2Flabel%2Flabels-remove-htmlFor-label.html&test=fast%2Fforms%2Flabel%2Flabels-remove-parent-label.html&test=fast%2Fforms%2Flabel%2Flabels-set-htmlFor-attribute.html&test=fast%2Fforms%2Fweek%2FValidityState-stepMismatch-week.html&test=fast%2Fforms%2Fweek%2Fweek-appearance-basic.html&test=fast%2Fforms%2Fweek%2Fweek-appearance-pseudo-elements.html&test=fast%2Fforms%2Fweek%2Fweek-interactive-validation-required.html&test=fast%2Fforms%2Fweek%2Fweek-setrangetext.html&test=fast%2Fselectors%2Fread-only-read-write-input-basics.html&test=imported%2Fblink%2Ffast%2Fforms%2Fweek-multiple-fields%2Fweek-multiple-fields-clearbutton-visibility-after-restore.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Frendering%2Fnon-replaced-elements%2Fform-controls%2Fresets.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Frendering%2Fwidgets%2Fappearance%2Fdefault-styles.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-checkValidity.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-reportValidity.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validity-rangeOverflow.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validity-rangeUnderflow.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validity-stepMismatch.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validity-valid.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validity-valueMissing.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fthe-form-element%2Fform-elements-filter.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fthe-form-element%2Fform-nameditem.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fthe-input-element%2Finput-stepdown.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fthe-input-element%2Finput-stepup.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fselectors%2Fpseudo-classes%2Finrange-outofrange.html&test=media%2Fvideo-autoplay.html&test=platform%2Fios%2Fios%2Ffast%2Fforms%2Fdate-input-decorations.html&style=debug&platform=ios&flavor=wk2 Crashlog: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000715497e2e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.JavaScriptCore 0x000000071554f891 WTF::StringImpl::createFromLiteral(char const*, unsigned int) + 81 (StringImpl.cpp:156) 2 com.apple.JavaScriptCore 0x000000071554f9aa WTF::StringImpl::createFromLiteral(char const*) + 58 (StringImpl.cpp:163) 3 com.apple.JavaScriptCore 0x00000007155d6830 WTF::String::String(WTF::ASCIILiteral) + 48 (WTFString.cpp:83) 4 com.apple.JavaScriptCore 0x00000007155d686d WTF::String::String(WTF::ASCIILiteral) + 29 (WTFString.cpp:85) 5 com.apple.WebCore 0x000000071ed3c31e WebCore::RenderTheme::weekInputStyleSheet() const + 62 (RenderTheme.cpp:1089) 6 com.apple.WebCore 0x000000071f003eac WebCore::Style::UserAgentStyle::ensureDefaultStyleSheetsForElement(WebCore::Element const&) + 1612 (UserAgentStyle.cpp:313) 7 com.apple.WebCore 0x000000071efd7afe WebCore::Style::Resolver::styleForElement(WebCore::Element const&, WebCore::RenderStyle const*, WebCore::RenderStyle const*, WebCore::RuleMatchingBehavior, WebCore::SelectorFilter const*) + 526 (StyleResolver.cpp:228) 8 com.apple.WebCore 0x000000071effed45 WebCore::Style::TreeResolver::styleForElement(WebCore::Element&, WebCore::RenderStyle const&) + 725 (StyleTreeResolver.cpp:146) 9 com.apple.WebCore 0x000000071efff27c WebCore::Style::TreeResolver::resolveElement(WebCore::Element&) + 348 (StyleTreeResolver.cpp:210) 10 com.apple.WebCore 0x000000071f000f14 WebCore::Style::TreeResolver::resolveComposedTree() + 1444 (StyleTreeResolver.cpp:539) 11 com.apple.WebCore 0x000000071f001c5a WebCore::Style::TreeResolver::resolve() + 570 (StyleTreeResolver.cpp:597) 12 com.apple.WebCore 0x000000071d3a2c0f WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) + 1039 (Document.cpp:2015) 13 com.apple.WebCore 0x000000071d3a365d WebCore::Document::updateStyleIfNeeded() + 509 (Document.cpp:2112) 14 com.apple.WebCore 0x000000071d39e999 WebCore::Document::updateLayout() + 393 (Document.cpp:2134) 15 com.apple.WebCore 0x000000071d39ffc2 WebCore::Document::updateLayoutIgnorePendingStylesheets(WebCore::Document::RunPostLayoutTasks) + 98 (Document.cpp:2154) 16 com.apple.WebCore 0x000000071d9b8240 WebCore::HTMLPlugInElement::renderWidgetLoadingPlugin() const + 176 17 com.apple.WebCore 0x000000071d9b7d5b WebCore::HTMLPlugInElement::pluginWidget(WebCore::HTMLPlugInElement::PluginLoadingPolicy) const + 75 (HTMLPlugInElement.cpp:153) 18 com.apple.WebCore 0x000000071ce4f90e WebCore::pluginScriptObjectFromPluginViewBase(WebCore::HTMLPlugInElement&, JSC::JSGlobalObject*) + 30
Attachments
Crash Log (111.73 KB, text/plain)
2020-07-06 15:36 PDT, Karl Rackler
no flags
Karl Rackler
Comment 1 2020-07-06 15:42:16 PDT
I can reproduce this on r263977, but unable to reproduce on r263976. Command: run-webkit-tests --ios-simulator --iterations 99 --exit-after-n-failures 3 --debug --force -f fast/forms/label/labelable-elements.html Result: 263977 - [2/99] fast/forms/label/labelable-elements.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=50205]) [2/99] fast/forms/label/labelable-elements.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=50207]) [4/99] fast/forms/label/labelable-elements.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=50223]) Exiting early after 3 failures. 3 tests run. 0 tests ran as expected, 3 didn’t (96 didn’t run): Regressions: Unexpected crashes (1) fast/forms/label/labelable-elements.html [ Crash ] 263976 - All 99 tests ran as expected.
Radar WebKit Bug Importer
Comment 2 2020-07-06 15:42:43 PDT
Darin Adler
Comment 3 2020-07-06 16:05:30 PDT
Fix is to change: return ""_s; to: return emptyString();
Sam Weinig
Comment 4 2020-07-06 16:13:25 PDT
Note You need to log in before you can comment on or make changes to this bug.