REGRESSION: (r263977): [ iOS Debug WK2 ] 36 fast form and web-platform test consistently crashing https://bugs.webkit.org/show_bug.cgi?id=214009 <rdar://problem/65151752>

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::weekInputStyleSheet const):
Replace ""_s with emptyString() to fix crashing tests.


Canonical link: https://commits.webkit.org/226811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263993 268f45cc-cd09-0410-ab3c-d52691b4dbfc